--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Dounia Hammou Personal Webpage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Dounia Hammou</strong>,<br> a second-year PhD student at the<br>
+					<h1><strong>Dounia Hammou</strong>,<br> a second-year PhD student in the<br>
 						<a href="https://www.cl.cam.ac.uk/research/rainbow/" target="_blank"><strong>Graphics and Interaction (Rainbow)</strong></a> <br>
 						Group at the University of Cambridge <br>
 						under the supervision of <a href="https://www.cl.cam.ac.uk/~rkm38/index.html" target="_blank"><strong>Rafał Mantiuk</strong></a>.</h1>
@@ -30,12 +30,22 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>About Me</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I am Dounia Hammou, a second-year PhD student in the Graphics and Interaction (Rainbow) group at the University of Cambridge,
+							 under the supervision of Dr Rafał Mantiuk.  My research is primarily centred on human vision and perception and its application 
+							 to video quality assessment metrics and visual difference predictors. 
+						</p>
+						<p> My research revolves around applying both human vision and machine learning for developing video quality 
+							assessment algorithms that account for the display and viewing conditions of observers, in the aim of optimising 
+							video delivery of both SDR and HDR content for all users, in any viewing environment. 
+						</p>
+						<p>Prior to my PhD, I studied at the National Institute of Telecommunication and ICT where I received my engineering degree 
+							in Telecommunications and Digital Technologies. During my undergraduate studies, I worked under the supervision of Dr Sid 
+							Ahmed Fezza and Dr Hamidouche Wassim on image quality assessment algorithms.
+						</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="pdf/Hammou_Dounia_CV.pdf" target="_blank" class="button">View CV</a></li>
 						</ul>
 					</section>
 
