--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Dounia Hammou Personal Webpage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="images/logo.png">
 	</head>
 	<body class="is-preload">
 
@@ -32,17 +29,17 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>I am Dounia Hammou, a second-year PhD student in the Graphics and Interaction (Rainbow) group at the University of Cambridge,
-							 under the supervision of Dr Rafał Mantiuk.  My research is primarily centred on human vision and perception and its application 
-							 to video quality assessment metrics and visual difference predictors. 
+						<p>I am Dounia Hammou, a second-year PhD student in the Graphics and Interaction (Rainbow) group at the University of 
+							Cambridge under the supervision of Dr Rafał Mantiuk. My research is primarily centered on human vision and perception 
+							and its application to video quality assessment metrics and visual difference predictors. 
 						</p>
-						<p> My research revolves around applying both human vision and machine learning for developing video quality 
-							assessment algorithms that account for the display and viewing conditions of observers, in the aim of optimising 
-							video delivery of both SDR and HDR content for all users, in any viewing environment. 
+						<p> My research revolves around applying both human vision and machine learning to develop video quality assessment 
+							algorithms that account for the display and viewing conditions of observers, with the aim of optimizing video delivery
+							 of both SDR and HDR content for all users in any viewing environment. 
 						</p>
-						<p>Prior to my PhD, I studied at the National Institute of Telecommunication and ICT where I received my engineering degree 
-							in Telecommunications and Digital Technologies. During my undergraduate studies, I worked under the supervision of Dr Sid 
-							Ahmed Fezza and Dr Hamidouche Wassim on image quality assessment algorithms.
+						<p>Prior to my PhD, I studied at the National Institute of Telecommunication and ICT, where I received my engineering 
+							degree in Telecommunications and Digital Technologies. During my undergraduate studies, I worked under the supervision
+							 of Dr Sid Ahmed Fezza and Dr Hamidouche Wassim on image quality assessment algorithms.
 						</p>
 						<ul class="actions">
 							<li><a href="pdf/Hammou_Dounia_CV.pdf" target="_blank" class="button">View CV</a></li>
@@ -51,42 +48,118 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<header class="major">
+							<h2>Publications</h2>
+						</header>
+
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+
+							<article class="col-12 work-item">
+								<a href="images/papers/hdr-vdc.JPG" class="image left thumb"><img src="images/papers/hdr-vdc.JPG" alt="" class="image_source"/></a>
+									<h3>The effect of viewing distance and display peak luminance -- HDR AV1 video streaming quality dataset</h3>
+									<h2><strong>Dounia Hammou</strong>, Lukáš Krasula, Christos G. Bampis, Zhi Li, Rafał K. Mantiuk</h2>
+									<h2>In review for QoMEX 2024 [conference]</h2>
+									<br>
+									<p>In this work, we collected a new video quality dataset, HDR-VDC, which captures the quality degradation of HDR 
+										content due to AV1 coding artifacts and the resolution reduction. The quality drop was measured at two viewing 
+										distances, corresponding to 60 and 120 pixels per visual degree, and two display peak luminance levels, 100 
+										and 800 nits. Our results indicate that the effect of both viewing distance and display brightness is significant, 
+										and it reduces the visibility of coding and upsampling artifacts on darker displays or those seen from a further 
+										distance. 
+									</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+
+							<article class="col-12 work-item">
+								<a href="images/papers/vd_rescaling_fcts.png" class="image left thumb"><img src="images/papers/vd_rescaling_fcts.png" alt="" class="image_source"/></a>
+								<h3>Image quality assessment across viewing distances: A comparison study of CSF-based and rescaling-based metrics</h3>
+								<h2><strong>Dounia Hammou</strong>, Lukáš Krasula, Christos G. Bampis, Zhi Li, Rafał K. Mantiuk</h2>
+								<h2>HVEI 2024 [conference]</h2>
+								<h2><a href="pdf/HVEI2024___Image_quality_assessment_across_viewing_distances__A_comparison_study_of_CSF_based_and_rescaling_based_metrics.pdf" target="_blank">pdf</a> / <a href="slides/Dounia_Hammou_HVEI2024.pptx" download>slides</a></h2>
+								<br>
+								<p>Assessing the quality of images often requires accounting for the viewing conditions. Metrics that account for 
+									these conditions typically rely on contrast sensitivity functions (CSFs). However, it is also possible to 
+									rescale the input images to account for the change in the viewing distance. In a recent study comparing these 
+									two types of metrics, we did not observe any statistical difference between the metrics. Hence, in this paper, 
+									we use Fourier analysis to study the similarities and differences between the mechanisms of CSF-based and 
+									rescaling-based metrics. 
+								</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+
+							<article class="col-12 work-item">
+								<a href="images/papers/patches_m_poly42_logMSE.png" class="image left thumb"><img src="images/papers/patches_m_poly42_logMSE.png" alt="" class="image_source"/></a>
+								<h3>Color calibration methods for OLED displays</h3>
+								<h2>Maliha Ashraf, Alejandro Sztrajman, <strong>Dounia Hammou</strong>, Rafał K. Mantiuk</h2>
+								<h2>HVEI 2024 [conference]</h2>
+								<h2><a href="pdf/HVEI2024_OLED_calibration_final.pdf" target="_blank">pdf</a></h2>
+								<br>
+								<p>Accurate color reproduction on a display requires an inverse display model, mapping colorimetric values (e.g. CIE XYZ) 
+									into RGB values driving the display. To create such a model, we collected a large dataset of display color measurements 
+									for a high refresh-rate 4-primary OLED display. We tested the performances of different regression methods: polynomial 
+									regression, look-up tables, multi-layer perceptrons, and others. We found that the performances of several variations 
+									of 4th-degree polynomial models were comparable to the look-up table and machine-learning-based models while being less 
+									resource-intensive. 
+								</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+
+							<article class="col-12 work-item">
+								<a href="images/papers/oled_calibration_thumbnail.png" class="image left thumb"><img src="images/papers/oled_calibration_thumbnail.png" alt="" class="image_source"/></a>
+								<h3>Forward and inverse colour calibration models for OLED displays</h3>
+								<h2>Maliha Ashraf, <strong>Dounia Hammou</strong>, Rafał K. Mantiuk</h2>
+								<h2>CIC 2023 [poster]</h2>
+								<h2><a href="pdf/CIC2023_OLED_calibration_extended_abstract_fontembedded.pdf" target="_blank">pdf</a> / <a href="poster/cic_poster.pdf" target="_blank">poster</a></h2>
+								<br>
+								<p>In this study, we compare different methods of color calibrating OLED 4-primary displays: three sub-gamut, PLCC-based compensation, 
+									color mixing, polynomial regression, and RGBW gamut. We found that the performance of the models depended on the display 
+									characteristics, and the models that performed better in terms of forward model error were not necessarily better for inverse model 
+									performance. 
+								</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+
+							<article class="col-12 work-item">
+								<a href="images/papers/mmsp_thumbnail.png" class="image left thumb"><img src="images/papers/mmsp_thumbnail.png" alt=""class="image_source" /></a>
+								<h3>Comparison of metrics for predicting image and video quality at varying viewing distances</h3>
+								<h2><strong>Dounia Hammou</strong>, Lukáš Krasula, Christos G. Bampis, Zhi Li, Rafał K. Mantiuk</h2>
+								<h2>MMSP 2023 [conference]</h2>
+								<h2><a href="pdf/MMSP_2023___Comparison_of_the_metrics_for_predicting_image_and_video_quality_at_varying_viewing_distances.pdf" target="_blank">pdf</a> / <a href="slides/Dounia_Hammou_MMSP2023.pptx" download>slides</a></h2>
+								<br>
+								<p>Viewing distance has arguably a significant impact on perceived image quality; however, only a few image and video quality metrics 
+									account for the effect of viewing distance. Those that do typically rely on contrast sensitivity functions (CSFs). 
+									Other metrics can be potentially adapted to different viewing distances by rescaling input images. In this 
+									paper, we investigate the performance of such adapted metrics together with those that natively account for viewing distance. The 
+									results for three testing datasets indicate that there is no evidence that the metrics based on the CSF outperform those that rely 
+									on rescaled images. 
+								</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+
+							<article class="col-12 work-item">
+								<a href="images/papers/visual_model_hdrvdp3.png" class="image left thumb"><img src="images/papers/visual_model_hdrvdp3.png" alt="" class="image_source"/></a>
+								<h3>HDR-VDP-3: A multi-metric for predicting image differences, quality and contrast distortions in high dynamic range and standard content</h3>
+								<h2>Rafał K. Mantiuk, <strong>Dounia Hammou</strong>, Param Hanji</h2>
+								<h2><a href="pdf/HDR_VDP_3__WACV_Challenge____Arxiv.pdf" target="_blank">pdf</a></h2>
+								<br>
+								<p>High-Dynamic-Range Visual-Difference-Predictor version 3, or HDR-VDP-3, is a visual metric that can fulfill several tasks, such 
+									as full-reference image/video quality assessment, prediction of visual differences between a pair of images, or prediction of 
+									contrast distortions. In this paper, we present a high-level overview of the metric, and describe how the metric was adapted for 
+									the HDR Video Quality Measurement Grand Challenge 2023. 
+								</p>
 							</article>
+
+							<article class="col-12 work-item">
+								<a href="images/papers/egb_thumbnail.png" class="image left thumb"><img src="images/papers/egb_thumbnail.png" alt="" class="image_source"/></a>
+								<h3>EGB: Image Quality Assessment based on Ensemble of Gradient Boosting</h3>
+								<h2><strong>Dounia Hammou</strong>, Sid Ahmed Fezza, Wassim Hamidouche</h2>
+								<h2>CVPR 2021 [workshop]</h2>
+								<h2><a href="pdf/Hammou_EGB_Image_Quality_Assessment_Based_on_Ensemble_of_Gradient_Boosting_CVPRW_2021_paper.pdf" target="_blank">pdf</a> / <a href="https://github.com/Dounia18/EGB.git" target="_blank">code</a></h2>
+								<br>
+								<p>In this paper, we propose an ensemble of gradient boosting (EGB) metric based on selected features similarity and ensemble learning.  
+									The regression network consists of three gradient-boosting regression models that are combined to derive the final quality score. 
+									Experiments were performed on the perceptual image processing algorithms (PIPAL) dataset, which has been used in the NTIRE 2021 
+									perceptual image quality assessment challenge.
+								</p>
+							</article>
+
+							
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
 					</section>
 
 				
