Updated the CV and corrected a small mistake in the first publication

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<a href="images/papers/hdr-vdc.JPG" class="image left thumb"><img src="images/papers/hdr-vdc.JPG" alt="" class="image_source"/></a>
 									<h3>The effect of viewing distance and display peak luminance -- HDR AV1 video streaming quality dataset</h3>
 									<h2><strong>Dounia Hammou</strong>, Lukáš Krasula, Christos G. Bampis, Zhi Li, Rafał K. Mantiuk</h2>
-									<h2>In review for QoMEX 2024 [conference]</h2>
+									<h2>Under review</h2>
 									<br>
 									<p>In this work, we collected a new video quality dataset, HDR-VDC, which captures the quality degradation of HDR 
 										content due to AV1 coding artifacts and the resolution reduction. The quality drop was measured at two viewing 
@@ -73,7 +73,7 @@
 								<a href="images/papers/vd_rescaling_fcts.png" class="image left thumb"><img src="images/papers/vd_rescaling_fcts.png" alt="" class="image_source"/></a>
 								<h3>Image quality assessment across viewing distances: A comparison study of CSF-based and rescaling-based metrics</h3>
 								<h2><strong>Dounia Hammou</strong>, Lukáš Krasula, Christos G. Bampis, Zhi Li, Rafał K. Mantiuk</h2>
-								<h2>HVEI 2024 [conference]</h2>
+								<h2>HVEI (EI) 2024 [conference]</h2>
 								<h2><a href="pdf/HVEI2024___Image_quality_assessment_across_viewing_distances__A_comparison_study_of_CSF_based_and_rescaling_based_metrics.pdf" target="_blank">pdf</a> / <a href="slides/Dounia_Hammou_HVEI2024.pptx" download>slides</a></h2>
 								<br>
 								<p>Assessing the quality of images often requires accounting for the viewing conditions. Metrics that account for 
@@ -89,7 +89,7 @@
 								<a href="images/papers/patches_m_poly42_logMSE.png" class="image left thumb"><img src="images/papers/patches_m_poly42_logMSE.png" alt="" class="image_source"/></a>
 								<h3>Color calibration methods for OLED displays</h3>
 								<h2>Maliha Ashraf, Alejandro Sztrajman, <strong>Dounia Hammou</strong>, Rafał K. Mantiuk</h2>
-								<h2>HVEI 2024 [conference]</h2>
+								<h2>COLOR (EI) 2024 [conference]</h2>
 								<h2><a href="pdf/HVEI2024_OLED_calibration_final.pdf" target="_blank">pdf</a></h2>
 								<br>
 								<p>Accurate color reproduction on a display requires an inverse display model, mapping colorimetric values (e.g. CIE XYZ) 
