--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<h3>Image quality assessment across viewing distances: A comparison study of CSF-based and rescaling-based metrics</h3>
 								<h2><strong>Dounia Hammou</strong>, Lukáš Krasula, Christos G. Bampis, Zhi Li, Rafał K. Mantiuk</h2>
 								<h2>HVEI (EI) 2024 [conference]</h2>
-								<h2><a href="pdf/HVEI2024___Image_quality_assessment_across_viewing_distances__A_comparison_study_of_CSF_based_and_rescaling_based_metrics.pdf" target="_blank">pdf</a> / <a href="slides/Dounia_Hammou_HVEI2024.pptx" download>slides</a></h2>
+								<h2><a href="pdf/HVEI2024___Image_quality_assessment_across_viewing_distances__A_comparison_study_of_CSF_based_and_rescaling_based_metrics.pdf" target="_blank">pdf</a></h2>
 								<br>
 								<p>Assessing the quality of images often requires accounting for the viewing conditions. Metrics that account for 
 									these conditions typically rely on contrast sensitivity functions (CSFs). However, it is also possible to 
@@ -121,7 +121,7 @@
 								<h3>Comparison of metrics for predicting image and video quality at varying viewing distances</h3>
 								<h2><strong>Dounia Hammou</strong>, Lukáš Krasula, Christos G. Bampis, Zhi Li, Rafał K. Mantiuk</h2>
 								<h2>MMSP 2023 [conference]</h2>
-								<h2><a href="pdf/MMSP_2023___Comparison_of_the_metrics_for_predicting_image_and_video_quality_at_varying_viewing_distances.pdf" target="_blank">pdf</a> / <a href="slides/Dounia_Hammou_MMSP2023.pptx" download>slides</a></h2>
+								<h2><a href="pdf/MMSP_2023___Comparison_of_the_metrics_for_predicting_image_and_video_quality_at_varying_viewing_distances.pdf" target="_blank">pdf</a></h2>
 								<br>
 								<p>Viewing distance has arguably a significant impact on perceived image quality; however, only a few image and video quality metrics 
 									account for the effect of viewing distance. Those that do typically rely on contrast sensitivity functions (CSFs). 
