--- a/index.html
+++ b/index.html
@@ -56,10 +56,15 @@
 
 							<article class="col-12 work-item">
 								<a href="images/papers/hdr-vdc.JPG" class="image left thumb"><img src="images/papers/hdr-vdc.JPG" alt="" class="image_source"/></a>
-									<h3>The effect of viewing distance and display peak luminance -- HDR AV1 video streaming quality dataset</h3>
+									<h3>The effect of viewing distance and display peak luminance - HDR AV1 video streaming quality dataset</h3>
 									<h2><strong>Dounia Hammou</strong>, Lukáš Krasula, Christos G. Bampis, Zhi Li, Rafał K. Mantiuk</h2>
-									<h2>Accepted at QoMEX 2024</h2>
-									<h2><a href="https://www.cl.cam.ac.uk/research/rainbow/projects/hdr-vdc/" target="_blank">Project Webpage</a></h2>
+									<h2>QoMEX 2024 [conference]</h2>
+									<h2>
+										<a href="pdf/Qomex2024_HDR_VDC.pdf" target="_blank">pdf</a> / 
+										<a href="https://www.cl.cam.ac.uk/research/rainbow/projects/hdr-vdc/" target="_blank">project webpage</a> / 
+										<a href="https://doi.org/10.17863/CAM.107964" target="_blank">dataset repository</a> / 
+										<a href="https://github.com/gfxdisp/HDR-VDC" target="_blank">github repository</a>
+									</h2>
 									<br>
 									<p>In this work, we collected a new video quality dataset, HDR-VDC, which captures the quality degradation of HDR 
 										content due to AV1 coding artifacts and the resolution reduction. The quality drop was measured at two viewing 
