Add doi of publicationsto webpage

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
 								<h3>Image quality assessment across viewing distances: A comparison study of CSF-based and rescaling-based metrics</h3>
 								<h2><strong>Dounia Hammou</strong>, Lukáš Krasula, Christos G. Bampis, Zhi Li, Rafał K. Mantiuk</h2>
 								<h2>HVEI (EI) 2024 [conference]</h2>
-								<h2><a href="pdf/HVEI2024___Image_quality_assessment_across_viewing_distances__A_comparison_study_of_CSF_based_and_rescaling_based_metrics.pdf" target="_blank">pdf</a></h2>
+								<h2>
+									<a href="pdf/HVEI2024___Image_quality_assessment_across_viewing_distances__A_comparison_study_of_CSF_based_and_rescaling_based_metrics.pdf" target="_blank">pdf</a>
+								</h2>
 								<br>
 								<p>Assessing the quality of images often requires accounting for the viewing conditions. Metrics that account for 
 									these conditions typically rely on contrast sensitivity functions (CSFs). However, it is also possible to 
@@ -96,7 +98,9 @@
 								<h3>Color calibration methods for OLED displays</h3>
 								<h2>Maliha Ashraf, Alejandro Sztrajman, <strong>Dounia Hammou</strong>, Rafał K. Mantiuk</h2>
 								<h2>COLOR (EI) 2024 [conference]</h2>
-								<h2><a href="pdf/HVEI2024_OLED_calibration_final.pdf" target="_blank">pdf</a></h2>
+								<h2>
+									<a href="pdf/HVEI2024_OLED_calibration_final.pdf" target="_blank">pdf</a>
+								</h2>
 								<br>
 								<p>Accurate color reproduction on a display requires an inverse display model, mapping colorimetric values (e.g. CIE XYZ) 
 									into RGB values driving the display. To create such a model, we collected a large dataset of display color measurements 
@@ -112,7 +116,10 @@
 								<h3>Forward and inverse colour calibration models for OLED displays</h3>
 								<h2>Maliha Ashraf, <strong>Dounia Hammou</strong>, Rafał K. Mantiuk</h2>
 								<h2>CIC 2023 [poster]</h2>
-								<h2><a href="pdf/CIC2023_OLED_calibration_extended_abstract_fontembedded.pdf" target="_blank">pdf</a> / <a href="poster/cic_poster.pdf" target="_blank">poster</a></h2>
+								<h2>
+									<a href="pdf/CIC2023_OLED_calibration_extended_abstract_fontembedded.pdf" target="_blank">pdf</a> / 
+									<a href="poster/cic_poster.pdf" target="_blank">poster</a>
+								</h2>
 								<br>
 								<p>In this study, we compare different methods of color calibrating OLED 4-primary displays: three sub-gamut, PLCC-based compensation, 
 									color mixing, polynomial regression, and RGBW gamut. We found that the performance of the models depended on the display 
@@ -126,7 +133,10 @@
 								<h3>Comparison of metrics for predicting image and video quality at varying viewing distances</h3>
 								<h2><strong>Dounia Hammou</strong>, Lukáš Krasula, Christos G. Bampis, Zhi Li, Rafał K. Mantiuk</h2>
 								<h2>MMSP 2023 [conference]</h2>
-								<h2><a href="pdf/MMSP_2023___Comparison_of_the_metrics_for_predicting_image_and_video_quality_at_varying_viewing_distances.pdf" target="_blank">pdf</a></h2>
+								<h2>
+									<a href="https://doi.org/10.1109/MMSP59012.2023.10337748" target="_blank">doi</a> / 
+									<a href="pdf/MMSP_2023___Comparison_of_the_metrics_for_predicting_image_and_video_quality_at_varying_viewing_distances.pdf" target="_blank">pdf</a>
+								</h2>
 								<br>
 								<p>Viewing distance has arguably a significant impact on perceived image quality; however, only a few image and video quality metrics 
 									account for the effect of viewing distance. Those that do typically rely on contrast sensitivity functions (CSFs). 
@@ -141,7 +151,10 @@
 								<a href="images/papers/visual_model_hdrvdp3.png" class="image left thumb"><img src="images/papers/visual_model_hdrvdp3.png" alt="" class="image_source"/></a>
 								<h3>HDR-VDP-3: A multi-metric for predicting image differences, quality and contrast distortions in high dynamic range and standard content</h3>
 								<h2>Rafał K. Mantiuk, <strong>Dounia Hammou</strong>, Param Hanji</h2>
-								<h2><a href="pdf/HDR_VDP_3__WACV_Challenge____Arxiv.pdf" target="_blank">pdf</a></h2>
+								<h2>
+									<a href="https://doi.org/10.48550/arXiv.2304.13625" target="_blank">doi</a> /
+									<a href="pdf/HDR_VDP_3__WACV_Challenge____Arxiv.pdf" target="_blank">pdf</a>
+								</h2>
 								<br>
 								<p>High-Dynamic-Range Visual-Difference-Predictor version 3, or HDR-VDP-3, is a visual metric that can fulfill several tasks, such 
 									as full-reference image/video quality assessment, prediction of visual differences between a pair of images, or prediction of 
@@ -155,7 +168,10 @@
 								<h3>EGB: Image Quality Assessment based on Ensemble of Gradient Boosting</h3>
 								<h2><strong>Dounia Hammou</strong>, Sid Ahmed Fezza, Wassim Hamidouche</h2>
 								<h2>CVPR 2021 [workshop]</h2>
-								<h2><a href="pdf/Hammou_EGB_Image_Quality_Assessment_Based_on_Ensemble_of_Gradient_Boosting_CVPRW_2021_paper.pdf" target="_blank">pdf</a> / <a href="https://github.com/Dounia18/EGB.git" target="_blank">code</a></h2>
+								<h2>
+									<a href="https://doi.org/10.1109/CVPRW53098.2021.00066" target="_blank">doi</a> /
+									<a href="pdf/Hammou_EGB_Image_Quality_Assessment_Based_on_Ensemble_of_Gradient_Boosting_CVPRW_2021_paper.pdf" target="_blank">pdf</a> / <a href="https://github.com/Dounia18/EGB.git" target="_blank">code</a>
+								</h2>
 								<br>
 								<p>In this paper, we propose an ensemble of gradient boosting (EGB) metric based on selected features similarity and ensemble learning.  
 									The regression network consists of three gradient-boosting regression models that are combined to derive the final quality score. 
